--- a/index.html
+++ b/index.html
@@ -166,19 +166,19 @@
             <h2 class="main-heading">Store</h2>
             <div class="store-grid">
                 <div class="store-item">
-                    <img src="https://source.unsplash.com/random/200x200?book" alt="Data Science Book" class="responsive-img">
+                    <img src="icon_book.png" alt="Data Science Book" class="responsive-img">
                     <h3 class="store-title">Data Science Book</h3>
                     <p class="price">$29.99</p>
                     <a href="#" class="btn">Buy Now</a>
                 </div>
                 <div class="store-item">
-                    <img src="https://source.unsplash.com/random/200x200?laptop" alt="Data Analysis Software" class="responsive-img">
+                    <img src="icon_computer.png" alt="Data Analysis Software" class="responsive-img">
                     <h3 class="store-title">Data Analysis Software</h3>
                     <p class="price">$199.99</p>
                     <a href="#" class="btn">Buy Now</a>
                 </div>
                 <div class="store-item">
-                    <img src="https://source.unsplash.com/random/200x200?merch" alt="Club Merchandise" class="responsive-img">
+                    <img src="icon_merchandise.png" alt="Club Merchandise" class="responsive-img">
                     <h3 class="store-title">Club Merchandise</h3>
                     <p class="price">$19.99</p>
                     <a href="#" class="btn">Buy Now</a>
